fix: scrollbar stylings now compatible with firefox browser :children_crossing:

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -1,25 +1,29 @@
 @import url(./fonts.scss);
+@import "config";
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   font: 112.5%/1.45em georgia, serif, sans-serif;
   box-sizing: border-box;
-  overflow-y: scroll;
   scroll-behavior: smooth;
 }
 * {
   margin: 0;
   padding: 0;
+  /* Firefox Compatibility */
+  scrollbar-width: thin;
+  scrollbar-color: $scrollbar-thumb-color $scrollbar-track-color;
 }
+/* Works on Chrome, Edge, and Safari */
 ::-webkit-scrollbar {
   width: 2px;
 }
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px $scrollbar-track-color;
+  -webkit-box-shadow: inset 0 0 6px $scrollbar-track-color;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #1e1e24;
+  background-color: $scrollbar-thumb-color;
 }
 body {
   -webkit-font-smoothing: antialiased;
@@ -33,7 +37,7 @@ body {
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
   font-family: "Montserrat";
-  background-color: rgb(240, 240, 240);
+  background-color: $primary-background-color;
   cursor: none;
 }
 article,
